use Azure congnitive services

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,10 @@ verify_ssl = true
 [packages]
 rpi-gpio = "*"
 fake-rpi = "*"
+requests = "*"
+matplotlib = "*"
+pillow = "*"
+azure-cognitiveservices-vision-computervision = "*"
 
 [requires]
 python_version = "3.7"
