make numpy darwin only

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ verify_ssl = true
 
 [packages]
 rpi-gpio = {version = "*", sys_platform = "== 'linux'"}
+numpy = {version = "*", sys_platform = "== 'darwin'"}
 fake-rpi = {version = "*", sys_platform = "== 'darwin'"}
 
 [requires]
