--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Copy sources
         run: |
           rm -rf /home/pi/smartmeter/*
-          cp -v . /home/pi/smartmeter
+          cp -rv . /home/pi/smartmeter/
