Concentrate on gas sensor again (#6)
* updated and simplified script

* make numpy darwin only

* add endless mode

Co-authored-by: Roland Kahlert <roland.kahlert@pwc.com>

--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,9 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-rpi-gpio = "*"
-fake-rpi = "*"
+"RPi.GPIO" = {version = "*", sys_platform = "== 'linux'"}
+numpy = {version = "*", sys_platform = "== 'darwin'"}
+fake-rpi = {version = "*", sys_platform = "== 'darwin'"}
 
 [requires]
-python_version = "3.7"
+python_version = "3.9"
